describe('InstancesIndicator', () => {
  it('Renders without instances and provision only once', () => {});
  test.todo('Renders with instances and provision only once');
  test.todo('Renders without instances and no provision only once');
  test.todo('Renders with instances and no provision only once');
});
