// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstancesIndicator Renders with instances and no provision only once 1`] = `
<div
  class="fd-panel__actions instances-indicator"
>
  <div
    class="sc-jqCOkK fzAxWh"
    type="default"
  >
    <div
      class="instances-indicator--general active"
    >
      3
    </div>
  </div>
</div>
`;

exports[`InstancesIndicator Renders with instances and provision only once 1`] = `
<div
  class="fd-panel__actions instances-indicator"
>
  <div
    class="sc-jqCOkK fzAxWh"
    type="default"
  >
    <div
      class="instances-indicator--general active provision-once"
    >
      1
    </div>
  </div>
</div>
`;

exports[`InstancesIndicator Renders without instances and no provision only once 1`] = `
<div
  class="fd-panel__actions instances-indicator"
/>
`;

exports[`InstancesIndicator Renders without instances and provision only once 1`] = `
<div
  class="fd-panel__actions instances-indicator"
>
  <div
    class="sc-jqCOkK fzAxWh"
    type="default"
  >
    <div
      class="instances-indicator--general provision-once"
    >
      1
    </div>
  </div>
</div>
`;
